# NetSecLab

./: README.md
lab1/: README.md
lab1/dockerConfig/: docker-compose.yml
lab1/src/: a.out  hijacking_auto_shell.py  hijacking_auto_simple.py  hijacking_manual_simple.py  syn_c.c  syn_c.h  syn_c.out  synflood.py  tcp_reset_auto.py  tcp_reset_mannual.py
lab2/: README.md
lab2/src/: db.attacker  dns_attack.c  generate_dns.py  local_dns_poisoning.py
lab3/: make.sh  未命名绘图.drawio
lab3/docker/: docker-compose.yml
lab3/example/tls-2023/: Makefile  README  tlsclient.c  tlsclient_ok.c  tlsserver.c
lab3/example/tls-2023/cert/: ca.crt  ca.key  client.csr  client.key  server.csr  server.key
lab3/example/tls-2023/cert/demoCA/: index.txt  index.txt.old
lab3/example/tls-2023/cert/demoCA/newcerts/: 1006.pem  1007.pem
lab3/src/cert/: ca.crt  ca.key  fqhclient.crt  fqhclient.csr  fqhclient.key  fqhserver.crt  fqhserver.csr  fqhserver.key  fqhserver.key.unsecure  openssl.cnf
lab3/src/cert/demoCA/: index.txt  index.txt.old
lab3/src/miniVPN/: CMakeLists.txt  IPPool.cpp  IPPool.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  VPNClient.cpp  VPNClient.h  VPNServer.cpp  VPNServer.h  main.cpp  utils.cpp  utils.h
